--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.2.1",
-    "parcel": "^2.14.4",
-    "svgo": "^3.3.2"
+     "parcel": "^2.2.1"
   },
   "dependencies": {
     "fracty": "^1.0.12"
